--- a/main.html
+++ b/main.html
@@ -516,9 +516,9 @@
             }
             else
             { // otherwise we were launched because the user touched a notification in the notification tray.
-              if (e.coldstart)
+              //if (e.coldstart)
                 //$("#app-status-ul").append('<li>--COLDSTART NOTIFICATION--' + '</li>');
-              else
+             // else
               //$("#app-status-ul").append('<li>--BACKGROUND NOTIFICATION--' + '</li>');
             }
               
