se sacó la funcion main para testear

--- a/main.html
+++ b/main.html
@@ -448,7 +448,7 @@
             var channelUri;
             
             function onDeviceReady() {
-                main();
+                //main();
       
         try 
         { 
