--- a/main.html
+++ b/main.html
@@ -493,7 +493,7 @@
             //$("#app-status-ul").append('<li>REGISTERED -> REGID:' + e.regid + "</li>");
             // Your GCM push server needs to know the regID before it can push to this device
             // here is where you might want to send it the regID for later use.
-            alert("regID = " + e.regid);
+            // alert("regID = " + e.regid);
             channelUri = e.regid;
             main();
             
